# HybridSearch2026

./: .gitignore  .gitmodules  .gitsubmodules  .tester_env  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
benchmark/: CMakeLists.txt
client/cpp/: CMakeLists.txt  hybridsearch_client.cpp  hybridsearch_client.h  table_info.h
client/cpp/test/: test_basic.cpp
conf/: follower.toml  hybridsearch.service  hybridsearch_conf.toml  hybridsearch_minio_conf.toml  infinity_conf.toml  leader.toml  learner.toml  learner2.toml  mock_follower.toml  mock_leader.toml  postinst  pytest_embedded_hybridsearch_conf.toml  pytest_parallel_continuous_conf.toml  pytest_parallel_hybridsearch_conf.toml  pytest_parallel_hybridsearch_follower.toml  pytest_parallel_hybridsearch_leader.toml  pytest_parallel_hybridsearch_minio.toml  pytest_parallel_hybridsearch_vfs_off.toml
docs/: release_notes.md
example/: README.md  delete_update_data.py  export_data.py  filter_data.py  filter_fulltext_keyword.py  fulltext_search.py  fulltext_search_zh.py  functions.py  hybrid_search.py  import_data.py  list_db_tables.py  search_with_limit_offset.py  secondary_index.py  show_node.py  simple_example.py  sparse_vector_search.py  tensor_search.py  vector_search.py
experiments/: __init__.py  setup.py  utils.py
python/: README.md  hybridsearch_http.py  run_all_test.py
scripts/: Dockerfile_hybridsearch  Dockerfile_hybridsearch_builder_centos7  Dockerfile_hybridsearch_builder_opencloudos  Dockerfile_hybridsearch_opencloudos  collect_cluster_log.py  collect_log.py  collect_restart_log.py  (+1 more)
(+2617 files in other folders)
